Fix image display if images are too wide or too high

--- a/editor/static/editor/css/style.css
+++ b/editor/static/editor/css/style.css
@@ -250,3 +250,31 @@ interactive {
 .editor-toolbar a.fa-floppy-o {
     margin-left: auto;
 }
+
+.card .collection-image-container {
+    min-height: 140px;
+    max-height: 200px;
+}
+
+.collection-image-container {
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+}
+
+.trending-image-container.collection-image-container {
+    width: 4em;
+    height: 4em;
+    margin-right: 1em;
+}
+
+.collection-image-container img {
+    width: 100%;
+    object-fit: contain;
+}
+
+.collection-image-container .no-image {
+    width: 100%;
+    height: 100%;
+    background-color: #ececec;
+}
